# open-fs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
configs/: env-vars.yaml  minimal.yaml  multi-mount.yaml
crates/ax-backends/: Cargo.toml
crates/ax-backends/src/: azure.rs  chroma.rs  error.rs  fs.rs  gcs.rs  lib.rs  memory.rs  postgres.rs  s3.rs  sftp.rs  traits.rs  webdav.rs
crates/ax-backends/tests/: conformance.rs
crates/ax-cli/: Cargo.toml
crates/ax-cli/src/: errors.rs  main.rs
crates/ax-cli/src/commands/: append.rs  cat.rs  config.rs  cp.rs  exists.rs  find.rs  grep.rs  index.rs  index_status.rs  ls.rs  mcp.rs  migrate.rs  mod.rs  mount.rs  mv.rs  rm.rs  search.rs  serve.rs  stat.rs  status.rs  sync.rs  tools.rs  tree.rs  unmount.rs  validate.rs  wal.rs  watch.rs  write.rs
crates/ax-cli/tests/: cli_integration.rs
crates/ax-config/: Cargo.toml
crates/ax-config/src/: defaults.rs  env.rs  lib.rs  migration.rs  types.rs  validation.rs
crates/ax-config/tests/: migration_integration.rs
crates/ax-core/: Cargo.toml
crates/ax-core/benches/: cache_bench.rs  vfs_bench.rs
crates/ax-core/src/: cache.rs  cached_backend.rs  chroma.rs  error.rs  lib.rs  metrics.rs  pipeline.rs  router.rs  search.rs  sync.rs  tools.rs  traits.rs  vfs.rs
crates/ax-ffi/: Cargo.toml  pyproject.toml
crates/ax-ffi/python/ax/: __init__.py  __init__.pyi
crates/ax-ffi/python/tests/: __init__.py  conftest.py  test_ax.py
crates/ax-ffi/src/: lib.rs
crates/ax-fuse/: Cargo.toml
crates/ax-fuse/src/: async_bridge.rs  common.rs  inode.rs  lib.rs  search_dir.rs  unix_fuse.rs  windows_fuse.rs
crates/ax-fuse/tests/: integration.rs
crates/ax-indexing/: Cargo.toml
crates/ax-indexing/src/: lib.rs  sparse.rs  types.rs
crates/ax-indexing/src/chunkers/: ast.rs  fixed.rs  recursive.rs  semantic.rs
crates/ax-indexing/src/embedders/: ollama.rs  openai.rs
crates/ax-indexing/src/extractors/: plaintext.rs
crates/ax-js/: Cargo.toml  index.d.ts  package.json  test.js
crates/ax-js/src/: lib.rs
crates/ax-local/: Cargo.toml
crates/ax-local/src/: content_hash.rs  incremental.rs  index_state.rs  index_worker.rs  lib.rs  persistent_worker.rs  pipeline.rs  search.rs  sparse.rs  watcher.rs  work_queue.rs
crates/ax-local/src/chunkers/: fixed.rs  recursive.rs  semantic.rs
crates/ax-local/src/embedders/: mod.rs  openai.rs
crates/ax-local/src/extractors/: mod.rs  plaintext.rs
crates/ax-mcp/: Cargo.toml
crates/ax-mcp/src/: handler.rs  lib.rs  protocol.rs  server.rs
crates/ax-mcp/tests/: mcp_integration.rs
crates/ax-remote/: Cargo.toml
crates/ax-remote/src/: cached_backend.rs  chroma_http.rs  grep.rs  lib.rs  router.rs  sync.rs  vfs.rs  wal.rs
crates/ax-remote/src/backends/: azure.rs  fs.rs  gcs.rs  memory.rs  mod.rs  postgres.rs  s3.rs  sftp.rs  webdav.rs
crates/ax-remote/src/fuse/: common.rs  inode.rs  mod.rs  search_dir.rs  unix_fuse.rs  windows_fuse.rs
crates/ax-remote/tests/: vfs_integration.rs
crates/ax-server/: Cargo.toml
crates/ax-server/src/: handlers.rs  lib.rs  routes.rs  state.rs
crates/ax-server/tests/: api_integration.rs
crates/ax-sim/: Cargo.toml
crates/ax-sim/src/: agent.rs  backend_wrapper.rs  fault.rs  invariants.rs  lib.rs  mock_chroma.rs  ops.rs  oracle.rs  sim.rs
crates/ax-sim/tests/: chaos.rs  deterministic.rs
crates/openfs-cli/: Cargo.toml
crates/openfs-cli/src/: errors.rs  main.rs
crates/openfs-cli/src/commands/: append.rs  cat.rs  config.rs  cp.rs  exists.rs  find.rs  grep.rs  index.rs  index_status.rs  ls.rs  mcp.rs  migrate.rs  mod.rs  mount.rs  mv.rs  rm.rs  search.rs  stat.rs  status.rs  sync.rs  tools.rs  tree.rs  unmount.rs  validate.rs  wal.rs  watch.rs  write.rs
crates/openfs-cli/tests/: cli_integration.rs
crates/openfs-config/: Cargo.toml
crates/openfs-config/src/: defaults.rs  migration.rs  types.rs  validation.rs
crates/openfs-config/tests/: migration_integration.rs
crates/openfs-core/: Cargo.toml
crates/openfs-core/src/: cache.rs  chroma.rs  error.rs  lib.rs  metrics.rs  path_trie.rs  tools.rs  traits.rs
crates/openfs-fuse/: Cargo.toml
crates/openfs-fuse/src/: async_bridge.rs  common.rs  inode.rs  lib.rs  search_dir.rs  unix_fuse.rs
crates/openfs-fuse/tests/: integration.rs
crates/openfs-local/: Cargo.toml
crates/openfs-local/src/: content_hash.rs  incremental.rs  index_state.rs  lib.rs  persistent_worker.rs  pipeline.rs  search.rs  sparse.rs  watcher.rs  work_queue.rs
crates/openfs-local/src/chunkers/: ast.rs  mod.rs  recursive.rs  semantic.rs
crates/openfs-local/src/embedders/: mod.rs  (+1 more)
crates/openfs-mcp/: Cargo.toml
crates/openfs-mcp/src/: handler.rs  lib.rs  protocol.rs  server.rs
crates/openfs-mcp/tests/: mcp_integration.rs
crates/openfs-remote/: Cargo.toml
crates/openfs-remote/.ax/: wal_wb_flush_test.db  wal_wb_recover_test.db
crates/openfs-remote/.openfs/: wal_wb_flush_test.db  wal_wb_recover_test.db
crates/openfs-remote/src/: cached_backend.rs  chroma_http.rs  grep.rs  lib.rs  router.rs  sync.rs  vfs.rs  wal.rs
crates/openfs-remote/tests/: vfs_integration.rs
crates/openfs-sim/: Cargo.toml
crates/openfs-sim/examples/: coding_agents_sim.rs  debug_ui.rs
crates/openfs-sim/src/: agent.rs  backend_wrapper.rs  coding_agents_sim.rs  debug_ui.rs  fault.rs  invariants.rs  lib.rs  mock_chroma.rs  ops.rs  oracle.rs  sim.rs
crates/openfs-sim/tests/: chaos.rs  coding_agents.rs  debug_ui.rs  deterministic.rs
docs/: ARCHITECTURE.md  CLAUDE_CODE_INTEGRATION.md  GETTING_STARTED.md  GUIDE.md  PROJECT_STATUS.md  USE_CASES.md  architecture-codex.md  getting_started_v2.md  openfs-local-remote.md  openfs-local.md  openfs-remote.md  project_overview.md  review-codex.md
examples/: ai-agent.yaml  minimal.yaml  multi-backend.yaml  postgres-backend.yaml  python_example.py  s3-backend.yaml  typescript_example.ts
examples/coding-agent/: README.md  agent.py  ax.yaml
plans/: write-path.md
ts/: README.md  package-lock.json  package.json  tsconfig.json
ts/src/: config.ts  errors.ts  index.ts  memory.ts  types.ts  vfs.ts
ts/test/: memory.test.ts  vfs.test.ts
(+20 files in other folders)
