[workspace]
resolver = "2"
members = [
    "crates/ax-config",
    "crates/ax-core",
    "crates/ax-local",
    "crates/ax-remote",
    "crates/ax-fuse",
    "crates/ax-mcp",
    "crates/ax-cli",
    "crates/ax-sim",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ax-vfs/ax"
keywords = ["vfs", "filesystem", "storage", "indexing"]
