[workspace]
resolver = "2"
members = [
    "crates/openfs-config",
    "crates/openfs-core",
    "crates/openfs-local",
    "crates/openfs-remote",
    "crates/openfs-fuse",
    "crates/openfs-mcp",
    "crates/openfs-cli",
    "crates/openfs-sim",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/open-fs/open-fs"
keywords = ["vfs", "filesystem", "storage", "indexing"]
