[package]
name = "ax-core"
version.workspace = true
edition.workspace = true

[dependencies]
ax-config = { path = "../ax-config" }
ax-backends = { path = "../ax-backends" }
ax-indexing = { path = "../ax-indexing" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "vfs_bench"
harness = false
