[package]
name = "ax-ffi"
version.workspace = true
edition.workspace = true

[lib]
name = "ax"
crate-type = ["cdylib", "rlib"]

[dependencies]
ax-config = { path = "../ax-config" }
ax-core = { path = "../ax-core" }
ax-backends = { path = "../ax-backends" }
ax-indexing = { path = "../ax-indexing" }
pyo3 = { version = "0.22", features = ["extension-module"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
serde_json = "1"

[build-dependencies]
pyo3-build-config = "0.22"
