[package]
name = "ax-indexing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Text chunking, embedding, and search indexing pipeline for AX"

[dependencies]
ax-config = { path = "../ax-config" }
blake3 = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"], optional = true }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

# Tree-sitter for AST chunking
tree-sitter = { version = "0.24", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }

# PDF text extraction
pdf-extract = { version = "0.8", optional = true }

[features]
default = ["embedder-ollama", "embedder-openai"]
embedder-ollama = ["reqwest"]
embedder-openai = ["reqwest"]
chunker-ast = ["tree-sitter", "tree-sitter-rust", "tree-sitter-python", "tree-sitter-javascript", "tree-sitter-typescript", "tree-sitter-go"]
extractor-pdf = ["pdf-extract"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
