[package]
name = "ax-js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ax-config = { path = "../ax-config" }
ax-core = { path = "../ax-core" }
ax-backends = { path = "../ax-backends" }
napi = { version = "2", default-features = false, features = ["napi4", "async", "tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
