[package]
name = "ax-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Remote storage backends, VFS, caching, sync, and FUSE for AX"

[lib]
test = true
doctest = false

[dependencies]
ax-config = { path = "../ax-config" }
ax-core = { path = "../ax-core" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }

# Optional backend dependencies
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"], optional = true }

# WebDAV backend
quick-xml = { version = "0.37", features = ["serialize"], optional = true }

# SFTP backend
russh = { version = "0.46", optional = true }
russh-sftp = { version = "2.0.0-beta.5", optional = true }
russh-keys = { version = "0.46", optional = true }

# GCS/Azure backend
urlencoding = { version = "2", optional = true }

# FUSE dependencies
parking_lot = { version = "0.12", optional = true }

[target.'cfg(unix)'.dependencies]
fuser = { version = "0.14", optional = true }
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
winfsp = { version = "0.5", optional = true }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem"], optional = true }

[features]
default = []
s3 = ["aws-sdk-s3", "aws-config"]
postgres = ["sqlx"]
webdav = ["quick-xml"]
sftp = ["russh", "russh-sftp", "russh-keys"]
gcs = ["urlencoding"]
azure = ["quick-xml", "urlencoding"]
fuse = ["fuser", "libc", "urlencoding", "parking_lot"]
all-backends = ["s3", "postgres", "webdav", "sftp", "gcs", "azure"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
