[package]
name = "ax-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Remote storage backends, VFS, caching, sync, and FUSE for AX"

[lib]
test = true
doctest = false

[dependencies]
ax-config = { path = "../ax-config" }
ax-core = { path = "../ax-core" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }

# Optional backend dependencies
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"], optional = true }

[features]
default = []
s3 = ["aws-sdk-s3", "aws-config"]
postgres = ["sqlx"]
all-backends = ["s3", "postgres"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
