[package]
name = "ax-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "REST API server for AX VFS"

[dependencies]
ax-config = { path = "../ax-config" }
ax-core = { path = "../ax-core" }
ax-local = { path = "../ax-local" }
ax-remote = { path = "../ax-remote" }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1"
tower-http = { version = "0.5", features = ["cors", "timeout", "limit", "trace"] }
tower = { version = "0.4", features = ["util", "limit"] }
chrono = "0.4"
regex = "1"
async-recursion = "1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
