[package]
name = "ax-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic simulation harness for AX multi-agent storage testing"

[lib]
test = true
doctest = false

[dependencies]
ax-core = { path = "../ax-core" }
ax-remote = { path = "../ax-remote" }
ax-local = { path = "../ax-local" }
ax-config = { path = "../ax-config" }
tokio = { version = "1", features = ["full", "test-util"] }
async-trait = "0.1"
chrono = "0.4"
rand = "0.8"
rand_chacha = "0.3"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
proptest = "1"
