[package]
name = "openfs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for the OpenFS virtual filesystem"

[[bin]]
name = "openfs"
path = "src/main.rs"
test = false
bench = false

[features]
default = []
fuse = ["openfs-fuse"]

[dependencies]
openfs-config = { path = "../openfs-config" }
openfs-core = { path = "../openfs-core" }
openfs-local = { path = "../openfs-local" }
openfs-remote = { path = "../openfs-remote" }
openfs-fuse = { path = "../openfs-fuse", optional = true }
openfs-mcp = { path = "../openfs-mcp" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dirs-next = "2"
async-recursion = "1"
serde_yaml = "0.9"
regex = "1"
serde_json = "1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"
