[package]
name = "openfs-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration types, validation, and migration for the OpenFS virtual filesystem"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
regex = "1"
