[package]
name = "openfs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared traits, error types, cache, and utilities for OpenFS"

[dependencies]
openfs-config = { path = "../openfs-config" }
tokio = { version = "1", features = ["sync", "time"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
